# csaf-validator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
csaf_validator/: main.py  rules.py  validator.py
csaf_validator/samples/: cve-2016-3674.json
csaf_validator/schemas/: csaf_2.0.json
docs/: vex-file-structure-and-relationships-explained.md
tests/: conftest.py  test_csaf_rules.py  test_validator.py
