[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csaf-validator"
version = "0.1.1"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
description = "A tool to validate CSAF (Common Security Advisory Framework) files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema",
    "pytest",
    "cvss",
    "cwe2",
    "langcodes",
]

[project.urls]
Homepage = "https://github.com/example/csaf-validator"
Issues = "https://github.com/example/csaf-validator/issues"

[project.scripts]
csaf-validator = "csaf_validator.main:main"
